cmake_minimum_required(VERSION 3.1...3.16)

project(mockups)
add_subdirectory(matlab)
add_subdirectory(octave)
add_subdirectory(knitro)
add_subdirectory(cplex)
add_subdirectory(gurobi)
add_subdirectory(worhp)
add_subdirectory(hsl)
add_subdirectory(snopt)
add_subdirectory(bqpd)
add_subdirectory(madnlp)